# JalGuard

./: .env.example  .gitignore  Dockerfile  README.md  Start-JalGuard.bat  inference.py  main.py  models.py  openenv.yaml  pre_submission_check.py  pyproject.toml  start_jalguard.py
BACKEND/: README.md  __init__.py  ai_service.py  demand.py  environment.py  faults.py  graders.py  inference.py  main.py  models.py  odisha_params.py  quality.py  quality_thresholds.py  requirements.txt  state.py  supply.py
BACKEND/api/: routes_admin.py  routes_ai.py  routes_tasks.py
BACKEND/core/: actions.py  config.py  environment.py
BACKEND/data/logs/: episodes.jsonl
BACKEND/data/scenarios/: _history.json
BACKEND/services/: ai_service.py  logger.py  scenario_chat.py
BACKEND/static/: admin.html  analytics.html  app.js  index.html  scenario.html  settings.html  styles.css
BACKEND/static/css/: styles.css
BACKEND/static/js/: admin.js  analytics.js  common.js  dashboard.js
BACKEND/tasks/: festival_high_demand.py  monsoon_overflow.py  odisha_survival.py  tank_leakage_crisis.py
BACKEND/utils/: validators.py
backend/: requirements.txt
backend/api/: routes_admin.py  routes_env.py
backend/core/: config.py  environment.py  state.py
backend/data/scenarios/: judge_demo_final.json  judge_demo_monsoon.json  judge_flow.json
backend/services/: ai_service.py  scenario_loader.py
backend/static/: dashboard.html  docs.html
backend/static/js/: scenario.js  (+1 more)
backend/tasks/: custom_user_scenario.py  drought_response.py  emergency_shortage_mgmt.py  registry.py
server/: app.py
